--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,17 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
 
+    //reside menu
+    compile 'com.specyci:residemenu:1.6+'
+
+    //boom menu
+    compile 'com.nightonke:boommenu:2.1.1'
+
+    compile 'net.objecthunter:exp4j:0.4.4'
+
+
+
+
+
 
 }
