--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,10 @@ dependencies {
 
     compile 'net.objecthunter:exp4j:0.4.4'
 
+    compile 'com.facebook.stetho:stetho:1.5.0'
+
+    compile 'com.facebook.stetho:stetho-urlconnection:1.5.0'
+
 
 
 
