--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.lenovo.myfinance">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/applogo"
         android:label="@string/app_name"
@@ -29,6 +31,7 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
           />
+
     </application>
 
 </manifest>
