--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,9 +55,7 @@ dependencies {
 
     compile 'com.facebook.stetho:stetho-urlconnection:1.5.0'
 
-
-
-
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 
 
 }
